Fix: Selected dates style is wrong on Calendar / Dark Mode (#41)

--- a/src/app/demo/components/apps/calendar/calendar.app.component.scss
+++ b/src/app/demo/components/apps/calendar/calendar.app.component.scss
@@ -9,7 +9,7 @@
     }
 
     .fc.fc-theme-standard .fc-highlight {
-        background-color: var(--primary-100);
+        background-color: var(--surface-200);
     }
 }
 
